--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "types": [
@@ -8,7 +8,7 @@
     ]
   },
   "files": [
-    "src/test.ts",
+    "test.ts",
     "src/polyfills.ts"
   ],
   "include": [
