--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "hd-toast-lib",
   "version": "0.0.0",
+  "license": "MIT",
+  "description": "Angular Simple Clean Toast Library",
+  "repository": "dashaHsh/hd-toast-lib",
+  "homepage": "",
+  "bugs": "https://github.com/dashaHsh/hd-toast-lib/issues",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build_lib": "ng build hd-toast-lib",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,15 +25,12 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/router": "7.2.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
-    "lodash": "^4.17.11",
-    "rxjs": "~6.5.2",
-    "scss-bundle": "^2.5.1",
     "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
   },
@@ -37,7 +40,7 @@
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~12.0.2",
+    "@types/node": "~10.14.7",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
     "codelyzer": "~5.0.1",
@@ -48,12 +51,38 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.2.0",
+    "ng-packagr": "^4.0.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.1.0",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.3",
     "tslint": "~5.11.0",
-    "typescript": "<3.3"
-  }
+    "typescript": "<3.3",
+    "bundle-scss": "^1.3.4"
+  },
+  "release": {
+    "branch": "master"
+  },
+  "bundlesize": [
+    {
+      "path": "./dist/toast-lib/bundles/hd-toast-lib.umd.min.js",
+      "maxSize": "10 kB"
+    },
+    {
+      "path": "./dist/toast-lib/esm2015/hd-toast-lib.js",
+      "maxSize": "5 kB"
+    },
+    {
+      "path": "./dist/toast-lib/esm5/hd-toast-lib.js",
+      "maxSize": "5 kB"
+    },
+    {
+      "path": "./dist/toast-lib/styles/main.css",
+      "maxSize": "5 kB"
+    },
+    {
+      "path": "./dist/toast-lib/main.scss",
+      "maxSize": "5 kB"
+    }
+  ]
 }
